# BetterSunshineEngine

./: .clang-format  .gitignore  .gitmodules  BetterSunshineEngine.kxe  CMakeLists.txt  CMakeSettings.json  README.md  build-debug.bat  build-release-deb.bat  build-release.bat  linker.ld
include/: application.hxx  bmg.hxx  debug.hxx  game.hxx  geometry.hxx  globals.hxx  icons.hxx  loading.hxx  logging.hxx  math.hxx  memory.hxx  module.hxx  music.hxx  object.hxx  player.hxx  settings.hxx  stage.hxx  sunscript.hxx  time.hxx  yoshi.hxx
include/BetterSMS/: application.hxx  area.hxx  bmg.hxx  debug.hxx  fps.hxx  game.hxx  loading.hxx  math.hxx  memory.hxx  module.hxx  music.hxx  object.hxx  player.hxx  settings.hxx  stage.hxx  sunscript.hxx  thp.hxx  time.hxx  warp.hxx  yoshi.hxx
include/BetterSMS/collision/: warp.hxx
include/BetterSMS/cstd/: ctype.h
include/BetterSMS/libs/: anim2d.hxx  boundbox.hxx  cheathandler.hxx  constmath.hxx  container.hxx  geometry.hxx  global_allocator.hxx  global_list.hxx  global_unordered_map.hxx  global_vector.hxx  lock.hxx  mutex.hxx  optional.hxx  profiler.hxx  scoped_ptr.hxx  string.hxx  triangle.hxx  warp.hxx
include/BetterSMS/objects/: fog.hxx  generic.hxx  particle.hxx  sound.hxx
include/collision/: warp.hxx
include/cstd/: ctype.h  stdlib.h
include/libs/: anim2d.hxx  cheathandler.hxx  constmath.hxx  container.hxx  triangle.hxx
include/objects/: generic.hxx
maps/: eu.map  kr.map  us.map
src/: application.cpp  area.cpp  autosave.cpp  bmg.cpp  debug.cpp  fade.cpp  game.cpp  geometry.cpp  globals.cpp  graphics.cpp  loading.cpp  logging.cpp  math.cpp  memory.cpp  module.cpp  music.cpp  object.cpp  p_area.hxx  p_autosave.hxx  p_globals.hxx  p_module.hxx  p_settings.hxx  p_sunscript.hxx  p_warp.hxx  player.cpp  settings.cpp  stage.cpp  thp.cpp  time.cpp  widescreen.cpp
src/asm/: mario.s
src/camera/: galaxy.cpp  viewport.cpp
src/collision/: boost.cpp  debug.cpp  element.cpp  generic.cpp  gravity.cpp  handlers.cpp  health.cpp  interact.cpp  nozzle.cpp  warp.cpp
src/cstd/: ctype.c  ppceabi.c  runtime.s  stdlib.c
src/debug/: cheat.cpp  debugstate.cpp  fps.cpp  freeflycam.cpp  gamestate.cpp  marioxyz.cpp  monitor.cpp  music.cpp  p_debug.hxx  state.cpp
src/level_select/: level_select.cpp  p_level_select.hxx
src/libs/: containers.cpp
src/libs/dolphin/: AI.c  DVD.c  GX.c  OS.c  VI.c  math.c
src/moveset/: backflip.cpp  fastdive.cpp  fluddgeneral.cpp  hoverburst.cpp  hoverslide.cpp  longjump.cpp  multijump.cpp
src/objects/: fog.cpp  generic.cpp  particle.cpp  sound.cpp
src/patches/: actor.cpp  camera.cpp  card.cpp  collision.cpp  emario.cpp  enemy.cpp  fludd.cpp  fps.cpp  generic.cpp  j2dprint.cpp  light.cpp  map.cpp  modokiTeselafix.cpp  npc.cpp  objectfix.cpp  player.cpp  railobj.cpp  shine.cpp  sun.cpp  sunscript.cpp  surfblooper.cpp  thp.cpp  tree.cpp  ui.cpp  underwater.cpp  water.cpp  widescreen.cpp  yoshi.cpp  ystorage.cpp
src/patches/collision/: search.cpp  update.cpp
src/physics/: airborn.cpp  climb.cpp  collision.cpp  generic.cpp  ground.cpp
src/shine/: bootout.cpp  extendcount.cpp  savefile.cpp
src/sunscript/: actor.cpp  bind.cpp  common.cpp  flags.cpp  getters.cpp  item.cpp  memory.cpp  music.cpp  strformat.cpp  vector.cpp
src/toolbox/: task.cpp
src/yoshi/: common.cpp  eggfruit.cpp  greenmode.cpp  juice.cpp
targets/: GCNClangDebug.cmake  GCNClangRelease.cmake  GCNKuriboClangDebug.cmake  GCNKuriboClangForToolbox.cmake  GCNKuriboClangRelease.cmake  GCNKuriboClangReleaseDeb.cmake
tools/: BetterSunshineEngine
